# cereals

./: .envrc  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose-dev.yml  docker-compose.yaml  entrypoint.sh  hosts  req.txt  setup.yml
backend/: Makefile  consts.py  create_sign.py  generation_doc.py  manage.py  models.py  pyproject.toml  pytest.ini  send_doc_to_edm.py  serializer.py  urls.py  views.py
backend/Daylesford/: asgi.py  settings.py  urls.py
backend/info/: mkdocs.yml
backend/info/docs/: index.md
backend/main/: admin.py  apps.py  create_sign.py  enums.py  exceptions.py  generation_doc.py  models.py  send_doc_to_edm.py  serializer.py  urls.py  utils.py  views.py
backend/main/managers/: offer.py  order.py  update.py  warehouse.py
backend/main/migrations/: 0001_initial.py  0002_auto_20210601_2116.py  0002_auto_20210714_0935.py  0003_alter_product_harvest_year.py  0003_auto_20210714_1217.py  0004_alter_warehouse_owner.py  0004_auto_20210604_0903.py  (+45 more)
backend/migrations/: 0001_initial.py  0002_auto_20210601_2116.py  0003_alter_product_harvest_year.py  0004_auto_20210604_0903.py  0005_auto_20210604_1853.py  0006_auto_20210604_1906.py  0007_auto_20210610_2046.py  0008_auto_20210610_2113.py  0009_auto_20210615_1904.py  0010_auto_20210616_1741.py  0011_company.py  0013_alter_company_bik.py  0014_auto_20210622_1539.py  0017_alter_product_specifications.py  0019_alter_offer_title.py  0020_auto_20210624_1103.py
backend/temp_file/: 2.pdf.sig  spec.csv  spec_short.csv  text1.docx  text2.docx
backend/traefik/: acme.json
(+159 files in other folders)
